force-app/main/default/objects/Jobs__x/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Currency</description>
    <externalDeveloperName>Currency</externalDeveloperName>
    <label>Currency</label>
    <length>128</length>
    <type>Text</type>
</CustomField>