force-app/main/default/objects/Jobs__x/fields/Employee_type__c.field-meta.xml
<CustomField>
    <fullName>Employee_type__c</fullName>
    <description>Employee_type</description>
    <externalDeveloperName>Employee_type</externalDeveloperName>
    <label>Employee_type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>