force-app/main/default/objects/Jobs__x/fields/Grade_level__c.field-meta.xml
<CustomField>
    <fullName>Grade_level__c</fullName>
    <description>Grade_level</description>
    <externalDeveloperName>Grade_level</externalDeveloperName>
    <label>Grade_level</label>
    <length>128</length>
    <type>Text</type>
</CustomField>