force-app/main/default/objects/Jobs__x/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>Id</description>
    <externalDeveloperName>Id</externalDeveloperName>
    <label>Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>