force-app/main/default/objects/Jobs__x/fields/Job_description__c.field-meta.xml
<CustomField>
    <fullName>Job_description__c</fullName>
    <description>Job_description</description>
    <externalDeveloperName>Job_description</externalDeveloperName>
    <label>Job_description</label>
    <length>128</length>
    <type>Text</type>
</CustomField>