force-app/main/default/objects/Jobs__x/fields/Job_status__c.field-meta.xml
<CustomField>
    <fullName>Job_status__c</fullName>
    <description>Job_status</description>
    <externalDeveloperName>Job_status</externalDeveloperName>
    <label>Job_status</label>
    <length>128</length>
    <type>Text</type>
</CustomField>