force-app/main/default/objects/Jobs__x/fields/Maximum_salary__c.field-meta.xml
<CustomField>
    <fullName>Maximum_salary__c</fullName>
    <description>Maximum_salary</description>
    <externalDeveloperName>Maximum_salary</externalDeveloperName>
    <label>Maximum_salary</label>
    <length>128</length>
    <type>Text</type>
</CustomField>