force-app/main/default/objects/Jobs__x/fields/Mid_point_salary__c.field-meta.xml
<CustomField>
    <fullName>Mid_point_salary__c</fullName>
    <description>Mid_point_salary</description>
    <externalDeveloperName>Mid_point_salary</externalDeveloperName>
    <label>Mid_point_salary</label>
    <length>128</length>
    <type>Text</type>
</CustomField>