force-app/main/default/objects/Jobs__x/fields/Standard_hours__c.field-meta.xml
<CustomField>
    <fullName>Standard_hours__c</fullName>
    <description>Standard_hours</description>
    <externalDeveloperName>Standard_hours</externalDeveloperName>
    <label>Standard_hours</label>
    <length>128</length>
    <type>Text</type>
</CustomField>